! Ticket #593, Fixed EVR-CP using the CPU while the player is paused when VSync is on
! Ticket #890, DVB: Disable pause for capture mode to avoid accidental playback stop.
! Ticket #1554, The OSD was looking bad when using the EVR Sync renderer
! Ticket #1600, Improve the naming of subtitles tracks (avoid showing a useless and ugly comma)
! Ticket #2396, DVB: Fix default audio track selection when its type is different than
  the first audio track
! Ticket #2423, Fix wrong rounding leading to small black bars when resizing the window.
  This was mostly visible when using the "auto-fit" zoom or when resizing manually.
! Ticket #2783, Fix crash when generating the chapter marks
! Ticket #2805, AviSplitter: Fix a crash when closing the file while re-indexing
! Ticket #2838, The window wasn't draggable anymore by clicking on the information panel
! Ticket #2839, Post-resize shaders didn't work with VMR-9 (renderless)
! Ticket #2855, The filename could be wrong when saving a screenshot or thumbnails
! Ticket #2859, FLACSource: Improve timestamps accuracy. This fixes some cases where the
  end of the file wasn't played.
! Ticket #2863, The OSD was incorrect when restarting the playback of a file after it ended
! Ticket #2864, VobSub subtitles were autoloaded twice
! Ticket #2881, "Auto-fit" and "Auto-fit (Larger Only)" zooms gave different results
  depending on if they were used in windowed or fullscreen mode.
! Ticket #2889, Fix incorrectly displayed OSD when using EVR and VRM-9 (windowed) renderers
! Ticket #2902, DVB: Some old channels weren't deleted when redoing the scan
! Ticket #2913, Fixed DXVA1 MPEG2 decoder
! Ticket #2931, DVB Subtitles: Fix a crash with some subtitles streams
! Ticket #2934, MPEG Splitter: Some files couldn't be opened
! Ticket #2939, Some fields of the renderer statistics were wrong
! Ticket #2971, Fix a rare crash on startup
! Ticket #2985, Prevent the volume OSD message from erasing the filename OSD message on startup